[tool.poetry]
name = " ee-modules "
version = "0.1.0"
description = "This project environment contains google-earth-engine modules"
authors = ["Antonios Koutroumpas <antonkout@gmail.com>"]
license = "Copyright 2024 AntonKout, all rights reserved."

[tool.poetry.dependencies]
python = "^3.8"
fiona = "1.8.22"
folium = "0.14.0"
pathlib = "*"
earthengine-api = "0.1.386"


[tool.pytest.ini_options]
filterwarnings = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"