[tool.poetry]
name = " ee-modules "
version = "0.1.0"
description = "This project environment contains google-earth-engine modules"
authors = ["Antonios Koutroumpas <antonkout@gmail.com>"]
license = "Copyright 2024 AntonKout, all rights reserved."

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "3.7.1"
shapely = "2.0.1"
pandas = "2.0.3"
earthengine-api = "0.1.386"
seaborn = "0.13.1"


[tool.pytest.ini_options]
filterwarnings = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"